// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mulesoft.connectors.helloworld";
option java_outer_classname = "CocherasSAPI";
option objc_class_prefix = "HLW";

package com.github.esteban.cocheras;

// The greeting service definition.
service CocherasService {
    // Sends a greeting
    rpc RegisterCar (CarCreation) returns (Car) {
    }

    rpc RegisterPerson (PersonCreation) returns (Person) {
    }

    rpc AddReservation (ReservationCreation) returns (Reservation) {

    }
}

// The request message containing the user's name.
message CarCreation {
    int32 ownerId = 1;
    string licensePlate = 2;
}

message ReservationCreation {
    int32 ownerId = 1;
    string licensePlate = 3;
    string date = 2;

}
message Reservation {
    bool confirmed = 1;
    int32 reservationId = 2;
}

message Car {
    int32 ownerId = 1;
    string licensePlate = 2;
    int32 id = 3;
}

message PersonCreation {
    string name = 1;
    string lastname = 2;
}

message Person {
    string name = 1;
    string lastname = 2;
    int32 id = 3;
}

